Adicionei Foro e link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Site criado pelo Raphael</h1>
+    <img src="https://github.com/github.png" alt="Minha Foto" class="minha-foto">
+
+    <p>Desenvolvedor em aprendizado, explorando a Vercel e o VS Code.</p>
+
+    <a href="https://linkedin.com" target="_blank" class="botao">Me contrate</a>
     <p> Esse é o meu primeiro site na Vercel.</p>
 </body>
 </html>
