--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
     <a href="https://linkedin.com" target="_blank" class="botao">Me contrate</a>
     <p> Esse é o meu primeiro site na Vercel.</p>
 </body>
+<script src="script.js"></script>
 </html>
