Conectando JS e Python

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>Desenvolvedor em aprendizado, explorando a Vercel e o VS Code.</p>
 
     <a href="https://www.flamengo.com.br/" target="_blank" class="botao">"Vamos Mengão"</a>
+    <p id="mensagem-python" style="margin-top: 20px; color: yellow;">⏳ Esperando o Python...</p>
     <p> Esse é o meu primeiro site na Vercel.</p>
 </body>
 <script src="script.js"></script>
