"Adicionei Web Scraping"

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <a href="https://www.flamengo.com.br/" target="_blank" class="botao">"Vamos Mengão"</a>
     <p id="mensagem-python" style="margin-top: 20px; color: yellow;">⏳ Esperando o Python...</p>
     <p> Esse é o meu primeiro site na Vercel.</p>
+    <hr> <h3>Web Scraping</h3>
+<button class="botao-wiki" style="background-color: green; color: white; padding: 10px;">Ler Wikipédia</button>
+<p id="resultado-wiki">Clique para buscar dados na Wiki...</p>
 </body>
 <script src="script.js"></script>
 </html>
